src/App.css
html {
  height: 100%;
}

body {
  background-color: #282c34;
  color: #ffffff;
  height: 100%;
}

/* app level rules */
.App {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
}

input {
  border-radius: 10px;
}

hr {
  margin: 0;
}

/* query rules */
.Query {
  position: relative;
  top: 0;
  width: 100%;
  padding: 0px 5px;
  text-align: left;
}

.Query label {
  padding: 5px;
  margin: 5px;
}

.Query select {
  width: 150px;
  margin: 20px 10px;
  padding: 5px;
}

/* toolbar rules */
.view-toolbar {
  display: grid;
  grid-template-columns: 25% 75%;
  padding: 10px 0px;
}

.Splitscreen {
  display: flex;
  width: 100%;
  height: 100%;
}

/* Mosaic rules */
.Mosaic {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
  grid-row-gap: 20px;
  background-color: #282c38;
}

.Mosaic label {
  width: 100%;
  height: 20px;
  padding: 5px 15px;
  font-weight: 600;
}

.Mosaic form {
  position: fixed;
  bottom: 0;
  background-color: #282c34;
  width: 100%;
  text-align: right;
  padding: 30px 40px;
}

.Mosaic form input {
  position: relative;
  right: 100px;
  padding: 10px;
}

.Mosaic:first-child {
  float: left;
  width: 50%;
  border-right: 2px solid gray;
}

/* Image rules */
.Image {
  display: contents;
  height: auto;
  margin: 20px;
  border: 2px solid gray;
}

.red-border {
  border: 3px solid red;
}

